# van-gogh

./: .gitignore  CMakeLists.txt  README.md  goghviewer.cpp  goghviewer.h  goghviewer.ui  image_info.c  image_info.h  imageloader.cpp  imageloader.h  main.cpp
book/: book.toml
book/src/: SUMMARY.md  c-abi.md  cxx.md  ffi-hardships.md  intro.md  resources.md
rembrandt/: Cargo.toml  build.rs
rembrandt/src/: ffi.rs  info.rs  lib.rs  proc.rs
