[package]
name = "rembrandt"
version = "0.1.0"
edition = "2021"

[lib]
name = "rembrandt"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.121"
image = "0.25.1"

[build-dependencies]
cxx-build = "1.0.121"
